--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -285,6 +285,7 @@ body {
             border-radius: 8px;
             max-width: 340px;
             transition: 0.3s;
+
             &:nth-child(2) {
                 margin: 0 10px;
 
@@ -524,54 +525,6 @@ body {
         }
     }
 }
-
-// .design__section {
-//     .left__side {
-//         min-height: 447px;
-//         max-height: 447px;
-
-//         .blocks {
-//             position: absolute;
-//         }
-
-//         .block_1 {
-//             z-index: 10;
-//             left: 8%;
-//             top: 0;
-//             width: 40%;
-//         }
-
-//         .block_2 {
-//             z-index: 10;
-//             top: 20px;
-//             right: 8%;
-//             width: 40%;
-//         }
-
-//         .block_3 {
-//             z-index: 20;
-//             top: 70px;
-//             left: 40%;
-//             transform: translateX(-50%);
-//             width: 40%;
-//         }
-
-//         .block_4 {
-//             z-index: 10;
-//             bottom: 40px;
-//             left: 0;
-//             width: 40%;
-//         }
-
-//         .block_5 {
-//             z-index: 15;
-//             bottom: 0;
-//             left: 58%;
-//             transform: translateX(-50%);
-//             width: 60%;
-//         }
-//     }
-// }
 
 .course2_finish {
     position: relative;
@@ -815,5 +768,34 @@ body {
     .fade:not(.show) {
         opacity: 0;
         display: none !important;
+    }
+}
+
+.sub__menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 99999;
+    width: 100%;
+    padding-top: 10px;
+
+    .sub__block {
+        max-width: 500px;
+    }
+
+    height: 80px;
+
+    .block {
+        &:hover {
+            .sub__icon {
+                .path {
+                    fill: $blue;
+                }
+            }
+
+            .sub__text {
+                color: $blue;
+            }
+        }
     }
 }
