--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -41,6 +41,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+    body {
+        padding-bottom: 80px;
+    }
     .home_blocks .block:hover {
         transform: scale(1) !important;
     }
