--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -142,3 +142,29 @@ a {
 .text-break {
 	word-break: break-all !important;
 }
+.f-12 {
+	line-height: 16px;
+}
+
+.f-14 {
+    line-height: 20px;
+}
+
+.f-16 {
+    line-height: 19px;
+}
+.f-18 {
+	line-height: 21px;
+}
+
+.f-20 {
+    line-height: 24px;
+}
+
+.f-30 {
+    line-height: 40px;
+}
+
+.f-40 {
+    line-height: 53px;
+}
