--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -44,9 +44,11 @@
     body {
         padding-bottom: 80px;
     }
+
     .home_blocks .block:hover {
         transform: scale(1) !important;
     }
+
     .indicators {
         .childs {
             min-height: 85px !important;
@@ -132,13 +134,16 @@
     .scroll-center {
         padding-left: 0 !important;
         padding-right: 0 !important;
+
         .scroll-block {
-            &:first-child{
+            &:first-child {
                 margin-left: 37px !important;
             }
+
             min-width: 240px;
+
             &.block-home {
-                &:first-child{
+                &:first-child {
                     padding-left: 37px !important;
                     margin-left: 0 !important;
                     min-width: calc(240px + 37px);
@@ -195,10 +200,26 @@
             }
         }
     }
+
     .block__section .block:hover {
         transform: scale(1) !important;
         box-shadow: initial !important;
     }
+
+    .about__count {
+        .block {
+            box-shadow: 0px 0px 10px #0000001A;
+            max-width: 250px;
+            min-height: 250px;
+            border-radius: 10px;
+            margin-right: 10px;
+        }
+    }
+
+    .color-block {
+        max-width: 70px !important;
+    }
+
 }
 
 @media only screen and (max-width: 576px) {
