--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -13,6 +13,7 @@ $dark-text: #808080;
 $dark-blue: #6595FF;
 $light-blue:#22AAFF;
 $card-text:#4C4C4C;
+$gray: #E7E7E9;
 
 // $dark-green : #1e4e4b;
 // $green-text : #1bd3a0;
@@ -33,6 +34,7 @@ $theme-colors: ( //   "brown": $brown,
     //   'light': $light-color,
     //   'lightx-2': $light-color-x2,
     //   'lightx-3': $light-color-x3,
+    'gray': $gray,
     'red': $orange,
     'orange': $orange,
     'yellow': $yellow,
