career and bug fix

--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -14,6 +14,7 @@ $dark-blue: #6595FF;
 $light-blue:#22AAFF;
 $card-text:#4C4C4C;
 $gray: #E7E7E9;
+$gray-light:#F3F3F4;
 
 // $dark-green : #1e4e4b;
 // $green-text : #1bd3a0;
@@ -35,6 +36,7 @@ $theme-colors: ( //   "brown": $brown,
     //   'lightx-2': $light-color-x2,
     //   'lightx-3': $light-color-x3,
     'gray': $gray,
+    'gray-light': $gray-light,
     'red': $orange,
     'orange': $orange,
     'yellow': $yellow,
