--- a/test-scss/scss/variables/_inputs.scss
+++ b/test-scss/scss/variables/_inputs.scss
@@ -8,14 +8,14 @@
     padding-right: 15px;
     transition: 0.1s;
 
-    &:hover {
+    &:not(.border-0):hover {
         transition: 0.1s;
         border: 4px solid #EFF4FF;
         padding-left: 12px;
 
     }
 
-    &:focus {
+    &:not(.border-0):focus {
         transition: 0.1s;
         border: 4px solid #EFF4FF;
         padding-left: 12px;
@@ -23,7 +23,7 @@
         color: $black;
     }
 
-    &.wrong {
+    &:not(.border-0).wrong {
         transition: 0.1s;
         border: 4px solid #FFEFEF;
         padding-left: 12px;
@@ -38,7 +38,6 @@
 
     .search-input {
         border: 2px solid transparent;
-        background-color: #F3F3F4;
         min-height: 40px;
         border-radius: 8px;
         padding-left: 40px;
@@ -46,15 +45,14 @@
         transition: 0.3s;
         color: $light-text;
 
-        &:hover {
+        &:not(.border-0):hover {
             transition: 0.3s;
             border: 4px solid #EFF4FF;
-            background-color: white;
             padding-left: 38px;
 
         }
 
-        &:focus {
+        &:not(.border-0):focus {
             transition: 0.3s;
             border: 4px solid #EFF4FF;
             background-color: white;
