--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -171,3 +171,19 @@ a {
 .box-shadow {
 	box-shadow: 0px 0px 10px #0000001A;
 }
+.list__type {
+    ul {
+        list-style-type: none;
+        /*use padding to move list item from left to right*/
+        padding-left: 1em;
+        li {
+            &::before {
+                content: "–";
+                position: absolute;
+                /*change margin to move dash around*/
+				margin-left: -1em;   
+				margin-top: 3px;    
+            }
+        }
+      }
+}
