--- a/test-scss/scss/checkbox.scss
+++ b/test-scss/scss/checkbox.scss
@@ -13,7 +13,7 @@ $checkbox-background: #5471A8;
 
 .checkmark {
   position: absolute;
-  top: 0;
+  top: 4px;
   left: 0;
   height: 15px;
   width: 15px;
