--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -4,7 +4,7 @@ $dark: #2c2e2b;
 $white: #ffffff;
 $black: #000000;
 $purple: #9F33FF;
-$blue: #22AAFF;
+$blue: #5086ff;
 $border : #E2E2E2;
 $banner-color: #F5F9FF;
 $green : #37B34A;
