--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -1,7 +1,8 @@
 @media only screen and (max-width: 1300px) {
 
     .center,
-    .scroll-center {
+    .scroll-center,
+    .header-center {
         padding: 0 15px;
     }
     .scroll-parent {
@@ -48,6 +49,32 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .finished__courses .course-block .block
+    {
+        &:nth-child(1) {
+            box-shadow: 0px 0px 10px #0000001A !important;
+            background-color: #fff !important;
+            transform: scale(1.07) !important;
+            span {
+                color: #000 !important;
+            }
+        }
+        &:nth-child(2) {
+                background-color: #F5F5F5 !important;
+                transform: scale(1) !important;
+                box-shadow: initial !important;
+            span {
+                color: #9E9E9E !important;
+            }
+        }
+
+    }
+    .premiup__prizes .left__side .block {
+        height: 130px !important;
+        img {
+            max-width: 160px;
+        }
+    }
     body {
         padding-bottom: 80px;
     }
@@ -102,6 +129,19 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100%;
+        position: relative;
+        min-height: 400px;
+        .block__res {
+            background-color: rgba(13, 13, 13, 0.41);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 12;
+            pointer-events: none;
+            top: 0;
+            left: 0;
+            padding: 0 37px;
+        }
     }
 
     .course2_finish::after {
@@ -114,6 +154,7 @@
 
     .f-30 {
         font-size: 24px !important;
+        line-height: 29px !important;
     }
 
     .f-24,
@@ -128,7 +169,7 @@
     .f-20 {
         font-size: 18px !important;
     }
-
+    
     .f-40 {
         font-size: 25px !important;
         line-height: 30px !important;
@@ -147,7 +188,7 @@
                 margin-left: 37px !important;
             }
 
-            min-width: 240px;
+            min-width: 245px;
 
             &.block-home {
                 &:first-child {
@@ -211,7 +252,14 @@
     .color-block {
         max-width: 70px !important;
     }
-
+    .py-100 {
+        padding-top: 30px !important;
+        padding-bottom: 50px !important;
+    }
+    .py-60 {
+        padding-top: 30px !important;
+        padding-bottom: 50px!important;	
+    }
 }
 
 @media only screen and (max-width: 576px) {
