--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -46,6 +46,11 @@
 // .relative {
 // 	position: relative;
 // }
+.header-center {
+	max-width: 1280px;
+	width: 100%;
+	margin:0 auto;
+}
 .center {
 	width: 100%;
 	max-width: 1088px;
@@ -136,7 +141,7 @@ a {
 
 * {
 	outline: none !important;
-	word-break: initial !important;
+	word-break: break-word;
 
 }
 .text-break {
@@ -148,12 +153,10 @@ a {
 
 .f-14 {
 	line-height: 20px;
-	letter-spacing: 1px;
 }
 
 .f-16 {
 	line-height: 19px;
-	letter-spacing: 1px;
 }
 .f-18 {
 	line-height: 21px;
@@ -168,7 +171,7 @@ a {
 }
 
 .f-40 {
-    line-height: 53px;
+    line-height: 48px;
 }
 .box-shadow {
 	box-shadow: 0px 0px 10px #0000001A;
