--- a/test-scss/scss/reset.scss
+++ b/test-scss/scss/reset.scss
@@ -45,5 +45,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
       }
     }
     h1,h2,span {
-      word-break: initial !important;
+      word-break: break-word;
+
     }
