--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -49,6 +49,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .footer {
+        min-height: 295px !important;
+        .up__side {
+            min-height: 200px !important;
+        }
+    }
     .finished__courses .course-block .block
     {
         &:nth-child(1) {
@@ -151,7 +157,9 @@
     .course_2-block .coure_2 p {
         opacity: 1 !important;
     }
-
+    .like__remove {
+        font-size: 12px !important;
+    }
     .f-30 {
         font-size: 24px !important;
         line-height: 29px !important;
@@ -164,6 +172,7 @@
 
     .f-16 {
         font-size: 14px !important;
+        line-height: 20px !important;
     }
 
     .f-20 {
