--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -49,6 +49,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .filter-responsive {
+        border: 1px solid #E2E2E2 !important;
+        background-color: white  !important;
+    }
     .mini__header {
         .nav-header,
         .nav__a {
@@ -66,7 +70,7 @@
         &:nth-child(1) {
             box-shadow: 0px 0px 10px #0000001A !important;
             background-color: #fff !important;
-            transform: scale(1.07) !important;
+            // transform: scale(1.07) !important;
             span {
                 color: #000 !important;
             }
@@ -79,7 +83,9 @@
                 color: #9E9E9E !important;
             }
         }
-
+        span {
+            font-size: 14px !important;
+        }
     }
     .premiup__prizes .left__side .block {
         height: 130px !important;
