--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -172,6 +172,14 @@
     .like__remove {
         font-size: 12px !important;
     }
+    .prizes .number {
+        min-width: 64px !important;
+        height: 64px !important;
+    }
+    .f-14 {
+        font-size: 12px !important;
+        line-height: 16px !important;
+    }
     .f-30 {
         font-size: 24px !important;
         line-height: 29px !important;
