--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -251,12 +251,6 @@ body {
                 background-color: $white;
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
-
-                .bottom {
-                    .left__side {
-                        border-left: 5px solid $blue;
-                    }
-                }
             }
 
             &:nth-child(2) {
@@ -310,6 +304,9 @@ body {
                     transition: 0.3s;
                     font-size: 14px;
                     line-height: 20px;
+                }
+                .name {
+                    color: $black;
                 }
             }
         }
