--- a/test-scss/scss/variables/_dropdowns.scss
+++ b/test-scss/scss/variables/_dropdowns.scss
@@ -1,4 +1,5 @@
 @import '../variable';
+
 .drop-parent {
     min-height: 40px;
     position: relative;
@@ -12,29 +13,39 @@
         transition: 0.3s;
         transition: 0.3s;
 
-        &:hover {
-            transition: 0.3s;
-            border: 4px solid #EFF4FF;
-            padding-left: 13px;
-            padding-right: 13px;
+        @media only screen and (min-width: 768px) {
+            &:hover {
+                transition: 0.3s;
+                border: 2px solid transparent !important;
+                box-shadow: 0 0 0 0.2rem #EFF4FF;
+                padding-right: 13px;
 
-        }
+            }
 
-        &:focus {
-            transition: 0.3s;
-            border: 4px solid #EFF4FF;
-            padding-left: 13px;
-            padding-right: 13px;
+            &:focus {
+                transition: 0.3s;
+                border: 2px solid transparent !important;
+                box-shadow: 0 0 0 0.2rem #EFF4FF;
+                padding-right: 13px;
+                color: $black;
+            }
 
-            color: $black;
+            &.filter-responsive {
+                border: 2px solid #E2E2E2;
+            }
         }
 
     }
-    &.show {
-        .drop {
-            border: 4px solid #EFF4FF;
-            padding-left: 13px;
-            padding-right: 13px;
+
+    @media only screen and (min-width: 768px) {
+
+        &.show {
+            .drop {
+                border: 2px solid transparent;
+                box-shadow: 0 0 0 0.2rem #EFF4FF;
+                // padding-left: 13px;
+                padding-right: 13px;
+            }
         }
     }
 }
@@ -50,17 +61,19 @@
     position: relative;
     display: flex;
     align-items: center;
-    &:hover {
-        color: #000000;
-        transition: 0.3s;
 
-    }
+    @media only screen and (min-width: 768px) {
 
-    &.active {
-        border: 2px solid transparent;
+        &:hover {
+            color: #000000;
+            transition: 0.3s;
+        }
 
-        transition: 0.3s;
-        background-color: #F3F3F4;
+        &.active {
+            border: 2px solid transparent;
+            transition: 0.3s;
+            background-color: #F3F3F4;
+        }
 
     }
 
