--- a/test-scss/scss/variables/_inputs.scss
+++ b/test-scss/scss/variables/_inputs.scss
@@ -10,24 +10,27 @@
 
     &:not(.border-0):hover {
         transition: 0.1s;
-        border: 4px solid #EFF4FF;
-        padding-left: 12px;
-
+        // padding-left: 12px;
+        box-shadow: 0 0 0 0.2rem #EFF4FF;
+        border: none;
+        border: 1px solid transparent;
     }
 
     &:not(.border-0):focus {
         transition: 0.1s;
-        border: 4px solid #EFF4FF;
-        padding-left: 12px;
-
+        // padding-left: 12px;
+        box-shadow: 0 0 0 0.2rem #EFF4FF;
+        border: none;
+        border: 1px solid transparent;
         color: $black;
     }
 
     &:not(.border-0).wrong {
         transition: 0.1s;
-        border: 4px solid #FFEFEF;
-        padding-left: 12px;
-
+        // padding-left: 12px;
+        box-shadow: 0 0 0 0.2rem #EFF4FF;
+        border: none;
+        border: 1px solid transparent;
 
     }
 }
@@ -47,17 +50,17 @@
 
         &:not(.border-0):hover {
             transition: 0.3s;
-            border: 4px solid #EFF4FF;
-            padding-left: 38px;
+            border: 1px solid transparent;
+            box-shadow: 0 0 0 0.2rem #EFF4FF;
 
         }
 
         &:not(.border-0):focus {
             transition: 0.3s;
-            border: 4px solid #EFF4FF;
+            border: 1px solid transparent;
             background-color: white;
-            padding-left: 38px;
             color: $black;
+            box-shadow: 0 0 0 0.2rem #EFF4FF;
         }
 
     }
