--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -220,6 +220,10 @@ a {
 	padding-top: 60px;
 	padding-bottom: 60px;	
 }
+.py-60_page {
+	padding-top: 60px;
+	padding-bottom: 60px;	
+}
 .dropdown-toggle::after {
 	display: none !important;
 }
