--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -240,7 +240,10 @@
         font-size: 25px !important;
         line-height: 30px !important;
     }
-
+    .py-60_page {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;	
+    }
     .center {
         padding: 0 37px !important;
     }
