--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -59,7 +59,13 @@
         background-color: $white !important;
         border: 1px solid $border !important;
     }
-
+    .color-texts{
+        font-size: 12px !important;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .filter__block {
         grid-template-columns: repeat(2, 1fr) !important;
 
