--- a/davaleba/scss/base.scss
+++ b/davaleba/scss/base.scss
@@ -1,51 +1,3 @@
-// .clear {
-// 	clear: both;
-// }
-// .space-betwen {
-// 	justify-content: space-between;
-// }
-// .flex-center {
-// 	justify-content: center;
-// }
-// .width-100{
-//     width: 100%;
-// }
-// .float-left {
-// 	float: left;
-// }
-// .float-right {
-// 	float: right;
-// }
-// .flex {
-// 	display: flex;
-// }
-// .color-white {
-// 	color: white;
-// }
-// .color-black {
-// 	color: black;
-// }
-// .color-white1 {
-// 	color: white;
-// }
-// .bq-color-white {
-// 	background-color: white;
-// }
-// .header-bq-color {
-// 	background-color: #F0F2ED;
-// 	widows: 100%;
-// }
-// .header-footer-center{
-// 	width: 100%;
-// 	max-width: 1300px;
-// 	margin: 0 auto;
-// }
-// .bq-color-red {
-//     background-color: #FF0000;
-// }
-// .relative {
-// 	position: relative;
-// }
 .header-center {
 	max-width: 1280px;
 	width: 100%;
@@ -56,33 +8,6 @@
 	max-width: 1088px;
 	margin: 0 auto;
 	display: block;
-}
-
-.scroll-center {
-	width: 100%;
-	max-width: 1103px;
-	margin: 0 auto;
-	display: block;
-}
-
-// .justify-center {
-// 	justify-content: center;
-// }
-.dropdown {
-	&.show {
-		.btn {
-			&::after {
-				transition: 0.3s;
-				transform: rotate(-180deg);
-			}
-		}
-	}
-
-	.btn {
-		&::after {
-			transition: 0.3s;
-		}
-	}
 }
 
 .transition {
@@ -108,7 +33,9 @@
 .br-tr {
 	border-top-right-radius: 8px;
 }
-
+.br-50 {
+	border-radius: 50%;
+}
 .br-bl {
 	border-bottom-left-radius: 8px;
 }
