--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -1,27 +1,13 @@
-$orange : #FF5D31;
-$yellow : #FFCD00;
-$dark: #2c2e2b;
 $white: #ffffff;
 $black: #000000;
-$purple: #9F33FF;
-$blue: #5086ff;
-$border : #E2E2E2;
-$banner-color: #F5F9FF;
-$green : #37B34A;
-$light-text: #9E9E9E;
-$dark-text: #808080;
-$dark-blue: #6595FF;
-$light-blue:#22AAFF;
-$card-text:#4C4C4C;
-$gray: #E7E7E9;
-$gray-light:#F3F3F4;
-
-// $dark-green : #1e4e4b;
-// $green-text : #1bd3a0;
-// $light-red: #e30b01;
-// $dark-red: #980000;
-// $banner-light: #516780;
-// $violet: #403e65;
+$dark-blue: #322A7D;
+$text: #354052;
+$text-2: #11141A;
+$light-text:#7F8FA4;
+$book-text:#BBC5D5;
+$light-red:#F35162;
+$light-yellow:#FFA101;
+$purple: #69519E;
 
 
 
@@ -30,33 +16,17 @@ $gray-light:#F3F3F4;
 
 
 
-
-$theme-colors: ( //   "brown": $brown,
-    //   'light': $light-color,
-    //   'lightx-2': $light-color-x2,
-    //   'lightx-3': $light-color-x3,
-    'gray': $gray,
-    'gray-light': $gray-light,
-    'red': $orange,
-    'orange': $orange,
-    'yellow': $yellow,
-    'dark': $dark,
+$theme-colors: (
     "white": $white,
     "black": $black,
-    'purple': $purple,
-    'blue': $blue,
-    'border': $border,
-    'banner': $banner-color,
-    'green': $green,
+    'light-yellow': $light-yellow,
+    'light-red': $light-red,
+    'book-text': $book-text,
     'light-text': $light-text,
-    'dark-text': $dark-text,
+    'text-2': $text-2,
+    'text': $text,
+    'purple': $purple,
     'dark-blue': $dark-blue,
-    'light-blue': $light-blue,
-    'card-text': $card-text // 'dark-red': $dark-red,
-    // 'dark-green': $dark-green,
-    // 'green-text': $green-text,
-    // 'banner-light': $banner-light,
-    // 'violet': $violet,
 
 );
 $number_varriables:(
@@ -82,6 +52,7 @@ $number_varriables:(
     '40': 40px,
     '48': 48px,
     '50': 50px,
+    '75': 75px,
     '80': 80px,
 );
 
@@ -168,6 +139,18 @@ $value in $number_varriables {
     }
 }
 
+@each $key,
+$value in $number_varriables {
+    .widht-#{$key} {
+        width: $value;
+    }
+}
+@each $key,
+$value in $number_varriables {
+    .height-#{$key} {
+        height: $value;
+    }
+}
 @each $key,
 $value in $number_varriables {
     .br-#{$key} {
