--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -1,29 +1,21 @@
-// $orange : #FF5D31;
-// $yellow : #FFCD00;
-// $dark: #2c2e2b;
-// $purple: #9F33FF;
-// $blue: #5086ff;
-// $border : #E2E2E2;
-// $banner-color: #F5F9FF;
-// $green : #37B34A;
-// $light-text: #9E9E9E;
-// $dark-text: #808080;
-// $dark-blue: #6595FF;
-// $light-blue:#22AAFF;
-// $card-text:#4C4C4C;
-// $gray: #E7E7E9;
-// $gray-light:#F3F3F4;
-
+$orange : #FF5D31;
+$yellow : #FFCD00;
+$dark: #2c2e2b;
 $white: #ffffff;
 $black: #000000;
-$dark-blue: #322A7D;
-$text: #354052;
-$text-2: #11141A;
-$light-text:#7F8FA4;
-$book-text:#BBC5D5;
-$light-red:#F35162;
-$light-yellow:#FFA101;
-$purple: #69519E;
+$purple: #9F33FF;
+$blue: #5086ff;
+$border : #E2E2E2;
+$banner-color: #F5F9FF;
+$green : #37B34A;
+$light-text: #9E9E9E;
+$dark-text: #808080;
+$dark-blue: #6595FF;
+$light-blue:#22AAFF;
+$card-text:#4C4C4C;
+$gray: #E7E7E9;
+$gray-light:#F3F3F4;
+
 
 
 
