--- a/davaleba/scss/reset.scss
+++ b/davaleba/scss/reset.scss
@@ -41,7 +41,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     a {
       text-decoration: none;
       &:hover {
-        color: initial  ;
+        color: inherit;
       }
     }
     h1,h2,span {
