--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -1,51 +1,10 @@
-// .clear {
-// 	clear: both;
-// }
-// .space-betwen {
-// 	justify-content: space-between;
-// }
-// .flex-center {
-// 	justify-content: center;
-// }
-// .width-100{
-//     width: 100%;
-// }
-// .float-left {
-// 	float: left;
-// }
-// .float-right {
-// 	float: right;
-// }
-// .flex {
-// 	display: flex;
-// }
-// .color-white {
-// 	color: white;
-// }
-// .color-black {
-// 	color: black;
-// }
-// .color-white1 {
-// 	color: white;
-// }
-// .bq-color-white {
-// 	background-color: white;
-// }
-// .header-bq-color {
-// 	background-color: #F0F2ED;
-// 	widows: 100%;
-// }
-// .header-footer-center{
-// 	width: 100%;
-// 	max-width: 1300px;
-// 	margin: 0 auto;
-// }
-// .bq-color-red {
-//     background-color: #FF0000;
-// }
-// .relative {
-// 	position: relative;
-// }
+.footer-list {
+	font-size: 14px;
+	line-height: 24px;
+}
+.header-list {
+	font-size: 16px;
+}
 .header-center {
 	max-width: 1280px;
 	width: 100%;
