--- a/test-scss/scss/variables/_dropdowns.scss
+++ b/test-scss/scss/variables/_dropdowns.scss
@@ -12,26 +12,26 @@
         padding-right: 15px;
         transition: 0.3s;
         transition: 0.3s;
-
+        font-size: 14px;
         @media only screen and (min-width: 768px) {
             &:hover {
                 transition: 0.3s;
-                border: 2px solid transparent !important;
+                border: 1px solid transparent !important;
                 box-shadow: 0 0 0 0.2rem #EFF4FF;
-                padding-right: 13px;
+                // padding-right: 13px;
 
             }
 
             &:focus {
                 transition: 0.3s;
-                border: 2px solid transparent !important;
+                border: 1px solid transparent !important;
                 box-shadow: 0 0 0 0.2rem #EFF4FF;
-                padding-right: 13px;
+                // padding-right: 13px;
                 color: $black;
             }
 
             &.filter-responsive {
-                border: 2px solid #E2E2E2;
+                border: 1px solid #E2E2E2;
             }
         }
 
@@ -56,7 +56,7 @@
     padding-left: 40px;
     padding-right: 15px;
     transition: 0.3s;
-    border: 2px solid $border;
+    border: 1px solid $border;
     color: #4C4C4C;
     position: relative;
     display: flex;
@@ -70,7 +70,7 @@
         }
 
         &.active {
-            border: 2px solid transparent;
+            border: 1px solid transparent;
             transition: 0.3s;
             background-color: #F3F3F4;
         }
@@ -88,5 +88,10 @@
         position: absolute;
         left: 16px;
         top: 9px;
+    }
+}
+.filter__place {
+    .dropdown-menu {
+        min-width: 100px !important;
     }
 }
